added a background img

--- a/src/components/KeyInformation/KeyInformation.scss
+++ b/src/components/KeyInformation/KeyInformation.scss
@@ -13,6 +13,7 @@
     border: 2px solid white;
     color: white;
     width: 50%;
+    background-color: #32323268;
 }
 
 .key {
@@ -21,6 +22,7 @@
     position: absolute;
     left: 3%;
     top: 1%;
+    
 
     &__button {
 
