--- a/src/App.scss
+++ b/src/App.scss
@@ -15,5 +15,6 @@ body {
 .App {
   text-align: center;
   background-color: #323232;
-  padding-top: 3rem;
+  background-image: url(./assets/peakpx.jpg);
+  padding-top: 6rem;
 }
