--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -20,7 +20,7 @@ body {
         position: absolute;
         font-size: 4rem;
         left: 15%;
-        top: 15%;
+        top: 25%;
         font-feature-settings: "ss01" 1, "ss03" 1, "kern" 1, "dlig" 1;
         animation: flicker 6s linear infinite;
     }
@@ -134,7 +134,7 @@ body {
         font-size: 2rem;
         color: #323232;
         left: 37%;
-        top: 40%;
+        top: 50%;
     }
 
 
@@ -143,7 +143,7 @@ body {
         text-decoration: none;
         position: absolute;
         left: 40%;
-        top: 50%;
+        top: 60%;
         color: white;
         font-size: 2rem;
         border: solid black;
@@ -157,5 +157,6 @@ body {
 
     &__canvas {
         border-radius: 1rem;
+        padding-top: 8rem;
     }
 }
